# gym_algo

./: .dockerignore  .gitignore  Dockerfile  FRONTEND_INTEGRATION.md  PRD.md  README.md  arm_pointcloud.py  docker-compose.yml  leg_pointcloud.py  main.py  pointcloud.py  pyproject.toml  shoulder_pointcloud.py  waist_pointcloud.py
.kilo/plans/: 1778121175839-witty-planet.md  1778204059872-lucky-moon.md
data/: app.db
src/algo/: __init__.py  arm.py  base.py  body.py  config.py  leg.py  shoulder.py  waist.py
src/algo/model/: __init__.py  model.py
src/app/: config.py  main.py
src/app/api/: measurement.py  task.py
src/app/api/routes/: health.py  jobs.py  measurements.py
src/app/core/: constants.py  paths.py  validation.py
src/app/model/: task.py
src/app/schemas/: __init__.py  common.py  measurements.py  task.py
src/app/services/: artifact_service.py  input_service.py  job_service.py  measurement.py  measurement_runner.py  task.py
src/app/utils/: constants.py  database.py  file_utils.py
src/pointcloud/: arm_pointcloud.py  leg_pointcloud.py  shoulder_pointcloud.py  waist_pointcloud.py
test/: seed_tasks.py  test_algo.py  test_low_confidence.py  test_task.py
