[project]
name = "gym-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "matplotlib",
    "numpy",
    "opencv-python",
    "plyfile",
    "python-multipart",
    "scipy",
    "ultralytics",
    "uvicorn[standard]",
]
