[project]
name = "gym-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi",
    "greenlet>=3.5.0",
    "matplotlib",
    "numpy",
    "opencv-python",
    "plyfile",
    "python-multipart",
    "scipy",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "ultralytics",
    "uvicorn[standard]",
]


[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
